--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,8 +16,15 @@
           android:layout_height="?attr/actionBarSize"
           android:background="?attr/colorPrimaryDark"
           android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-          app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
-      </android.support.v7.widget.Toolbar>
+          app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+
+      <android.support.v7.widget.RecyclerView
+          android:id="@+id/recycler_view"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent">
+
+      </android.support.v7.widget.RecyclerView>
+
 
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
